Prepare Web Components for Markdowning

--- a/files/en-us/web/web_components/index.html
+++ b/files/en-us/web/web_components/index.html
@@ -17,9 +17,7 @@ tags:
 ---
 <div>{{DefaultAPISidebar("Web Components")}}</div>
 
-<div class="summary">
 <p>Web Components is a suite of different technologies allowing you to create reusable custom elements — with their functionality encapsulated away from the rest of your code — and utilize them in your web apps.</p>
-</div>
 
 <h2 id="Concepts_and_usage">Concepts and usage</h2>
 
@@ -74,6 +72,7 @@ tags:
  </dd>
  <dt>Extensions for creating custom built-in elements</dt>
  <dd>
+ <p>The following extensions are defined:</p>
  <ul>
   <li>The {{htmlattrxref("is")}} global HTML attribute: Allows you to specify that a standard HTML element should behave like a registered custom built-in element.</li>
   <li>The "is" option of the {{domxref("Document.createElement()")}} method: Allows you to create an instance of a standard HTML element that behaves like a given registered custom built-in element.</li>
