Prepare XML for Markdowning

--- a/files/en-us/web/xml/xml_colon_base/index.html
+++ b/files/en-us/web/xml/xml_colon_base/index.html
@@ -111,7 +111,7 @@ fill: #161615;
  <tbody>
   <tr>
    <td><a href="https://www.w3.org/TR/xmlbase/">XML Base (Second Edition)</a></td>
-   <td><span class="spec-REC">Recommendation</span></td>
+   <td>Recommendation</td>
    <td></td>
   </tr>
  </tbody>
