Prepare Tutorials for Markdowning

--- a/files/en-us/web/tutorials/index.html
+++ b/files/en-us/web/tutorials/index.html
@@ -27,7 +27,7 @@ tags:
  <dd><em>Getting started with the Web</em> is a concise series introducing you to the practicalities of web development. You'll set up the tools you need to construct a simple webpage and publish your own simple code.</dd>
 </dl>
 
-<h2 class="Documentation" id="HTML-Tutorials">HTML Tutorials</h2>
+<h2 id="HTML-Tutorials">HTML Tutorials</h2>
 
 <h3 id="Introductory_level">Introductory level</h3>
 
@@ -69,7 +69,7 @@ tags:
  <dd>Optimize web pages to provide a more responsive site for visitors and reduce the load on your web server and Internet connection.</dd>
 </dl>
 
-<h2 class="Documentation" id="CSS-Tutorials">CSS Tutorials</h2>
+<h2 id="CSS-Tutorials">CSS Tutorials</h2>
 
 <h3 id="Introductory_level_2">Introductory level</h3>
 
@@ -83,9 +83,9 @@ tags:
 <dl>
  <dt><a href="/en-US/docs/Learn/CSS/Building_blocks">CSS building blocks</a></dt>
  <dd>
- <p class="summary">This module carries on where <a href="/en-US/docs/Learn/CSS/First_steps">CSS first steps</a> left off — now you've gained familiarity with the language and its syntax, and got some basic experience with using it, its time to dive a bit deeper. This module looks at the cascade and inheritance, all the selector types we have available, units, sizing, styling backgrounds and borders, debugging, and lots more.</p>
+ <p>This module carries on where <a href="/en-US/docs/Learn/CSS/First_steps">CSS first steps</a> left off — now you've gained familiarity with the language and its syntax, and got some basic experience with using it, its time to dive a bit deeper. This module looks at the cascade and inheritance, all the selector types we have available, units, sizing, styling backgrounds and borders, debugging, and lots more.</p>
 
- <p class="summary">The aim here is to provide you with a toolkit for writing competent CSS and help you understand all the essential theory, before moving on to more specific disciplines like <a href="/en-US/docs/Learn/CSS/Styling_text">text styling</a> and <a href="/en-US/docs/Learn/CSS/CSS_layout">CSS layout</a>.</p>
+ <p>The aim here is to provide you with a toolkit for writing competent CSS and help you understand all the essential theory, before moving on to more specific disciplines like <a href="/en-US/docs/Learn/CSS/Styling_text">text styling</a> and <a href="/en-US/docs/Learn/CSS/CSS_layout">CSS layout</a>.</p>
  </dd>
  <dt><a href="/en-US/docs/Learn/CSS/Styling_text">Styling text</a></dt>
  <dd>Here we look at text styling fundamentals, including setting font, boldness, and italics, line and letter spacing, and drop shadows and other text features. We round off the module by looking at applying custom fonts to your page, and styling lists and links.</dd>
@@ -132,7 +132,7 @@ tags:
  <dd>Articles about using HTML5 right now.</dd>
 </dl>
 
-<h2 class="Documentation" id="JavaScript-Tutorials">JavaScript Tutorials</h2>
+<h2 id="JavaScript-Tutorials">JavaScript Tutorials</h2>
 
 <h3 id="Introductory_level_3">Introductory level</h3>
 
