--- a/files/en-us/web/events/detecting_device_orientation/index.html
+++ b/files/en-us/web/events/detecting_device_orientation/index.html
@@ -23,8 +23,7 @@ tags:
 <p>All you need to do in order to begin receiving orientation change is to listen to the {{event("deviceorientation")}} event:</p>
 
 <div class="notecard note">
-  <h4>Note</h4>
-  <p><a href="https://github.com/wagerfield/parallax">parallax</a> is a polyfill for normalizing the accelerometer and gyroscope data on mobile devices. This is useful for overcoming some of the differences in device support for device orientation.</p>
+  <p><strong>Note:</strong> <a href="https://github.com/wagerfield/parallax">parallax</a> is a polyfill for normalizing the accelerometer and gyroscope data on mobile devices. This is useful for overcoming some of the differences in device support for device orientation.</p>
 </div>
 
 <pre class="brush: js">window.addEventListener("deviceorientation", handleOrientation, true);
