--- a/files/en-us/web/events/orientation_and_motion_data_explained/index.html
+++ b/files/en-us/web/events/orientation_and_motion_data_explained/index.html
@@ -34,7 +34,7 @@ tags:
 
 <p>The device coordinate frame is the coordination frame fixed on the center of the device. We use lower-case letters ("x", "y", and "z") to describe the axes of the device coordinate frame.</p>
 
-<p><img class="default internal" src="axes.png"></p>
+<p><img src="axes.png"></p>
 
 <ul>
  <li>The <strong>x</strong> axis is in the plane of the screen and is positive toward the right and negative toward the left.</li>
@@ -42,7 +42,9 @@ tags:
  <li>The <strong>z</strong> axis is perpendicular to the screen or keyboard, and is positive extending outward from the screen.</li>
 </ul>
 
-<div class="note"><strong>Note:</strong> On a phone or tablet, the orientation of the device is always considered in relation to the standard orientation of the screen; this is the "portrait" orientation on most devices. On a laptop computer, the orientation is considered in relation to the keyboard. If you want to detect changes in device orientation in order to compensate, you can use the <code>orientationchange</code> event.</div>
+<div class="note">
+  <p><strong>Note:</strong> On a phone or tablet, the orientation of the device is always considered in relation to the standard orientation of the screen; this is the "portrait" orientation on most devices. On a laptop computer, the orientation is considered in relation to the keyboard. If you want to detect changes in device orientation in order to compensate, you can use the <code>orientationchange</code> event.</p>
+</div>
 
 <h2 id="About_rotation">About rotation</h2>
 
@@ -52,7 +54,7 @@ tags:
 
 <p>Rotation around the z axis -- that is, twisting the device -- causes the <strong>alpha</strong> rotation angle to change:</p>
 
-<p><img class="default internal" src="alpha.png"></p>
+<p><img src="alpha.png"></p>
 
 <p>The alpha angle is 0° when top of the device is pointed directly toward the Earth's north pole, and increases as the device is rotated toward the left.</p>
 
@@ -68,7 +70,7 @@ tags:
 
 <p>Rotation around the y axis -- that is, tilting the device toward the left or right -- causes the <strong>gamma</strong> rotation angle to change:</p>
 
-<p><img class="default internal" src="gamma.png"></p>
+<p><img src="gamma.png"></p>
 
 <p>The gamma angle is 0° when the device's left and right sides are the same distance from the surface of the Earth, and increases toward 90° as the device is tipped toward the right, and toward -90° as the device is tipped toward the left.</p>
 
