--- a/files/en-us/mozilla/firefox/releases/42/index.html
+++ b/files/en-us/mozilla/firefox/releases/42/index.html
@@ -96,8 +96,8 @@ install Firefox Developer Edition</a> Firefox 42 was released on November 3, 201
 
 <ul>
  <li>When trying to invoke {{domxref('Node.cloneNode()')}} on a {{domxref('ShadowRoot')}}, throws a <code>DataCloneError</code> exception ({{bug(1176757)}}).</li>
- <li>When invoking {{domxref('Document.importNode()')}} with a {{domxref('ShadowRoot')}} as an argument, we now throws a <code>NotSupportedError</code> exception ({{bug(1177914)}}).</li>
- <li>When invoking {{domxref('Document.adoptNode()')}} with a {{domxref('ShadowRoot')}} as an argument, we now throws a <code>HierarchyRequestError</code> exception ({{bug(1177991)}}).</li>
+ <li>When invoking {{domxref('Document.importNode()')}} with a {{domxref('ShadowRoot')}} as an argument, we now throws a <code>NotSupportedError</code> {{domxref("DOMException")}} ({{bug(1177914)}}).</li>
+ <li>When invoking {{domxref('Document.adoptNode()')}} with a {{domxref('ShadowRoot')}} as an argument, we now throws a <code>HierarchyRequestError</code> {{domxref("DOMException")}} ({{bug(1177991)}}).</li>
 </ul>
 
 <h4 id="WebGL">WebGL</h4>
