--- a/files/en-us/mdn/contribute/howto/write_an_api_reference/sidebars/index.html
+++ b/files/en-us/mdn/contribute/howto/write_an_api_reference/sidebars/index.html
@@ -99,7 +99,7 @@ tags:
 	<p>Creates a link with the title "Detecting device orientation", which points to <a href="/en-US/docs/Web/API/Detecting_device_orientation">https://developer.mozilla.org/en-US/docs/Web/API/Detecting_device_orientation</a>.</p>
 	</li>
 	<li>
-	<p><code>"dictionaries"</code> — an array of strings listing all of the dictionaries which are part of the API. Generally, only dictionaries used by more than one property or method should be listed here, unless they are of special significance or are likely to require being referenced from multiple pages. "CryptoKeyPair" results in a link to <a href="/en-US/docs/Web/API/CryptoKeyPair">https://developer.mozilla.org/en-US/docs/Web/API/CryptoKeyPair</a>.</p>
+	<p><code>"dictionaries"</code> — an array of strings listing all of the dictionaries which are part of the API. Generally, only dictionaries used by more than one property or method should be listed here, unless they are of special significance or are likely to require being referenced from multiple pages. "RTCConfiguration" results in a link to <a href="/en-US/docs/Web/API/RTCConfiguration">https://developer.mozilla.org/en-US/docs/Web/API/RTCConfiguration</a>.</p>
 	</li>
 	<li>
 	<p><code>"types"</code> — an array of typedefs and enumerated types defined by the API. You may choose to only list those that are of special importance or are referenced from multiple pages, in order to keep the list short. "RTCSctpTransportState" creates a link to <a href="/en-US/docs/Web/API/RTCSctpTransport/state">https://developer.mozilla.org/en-US/docs/Web/API/RTCSctpTransportState</a>.</p>
