[Markdown][Web/PWA] Prepare Web/PWA for Markdowning (#9758)
* Prepare PWA docs for Markdowning

* Remove a stray closing tag

--- a/files/en-us/web/progressive_web_apps/structural_overview/index.html
+++ b/files/en-us/web/progressive_web_apps/structural_overview/index.html
@@ -14,7 +14,7 @@ tags:
   - Webapps
   - contents
 ---
-<p>While progressive web apps (PWAs) can do anything any web content can do, they need to have a particular structure and include specific components in order to be recognized as a web app that can be used both on the web and installed and run as a local application. <span class="seoSummary">In this structural overview, we'll look at the features that make up a standard web application, as well as some design patterns you can follow when building your PWA.</span></p>
+<p>While progressive web apps (PWAs) can do anything any web content can do, they need to have a particular structure and include specific components in order to be recognized as a web app that can be used both on the web and installed and run as a local application. In this structural overview, we'll look at the features that make up a standard web application, as well as some design patterns you can follow when building your PWA.</p>
 
 <h2 id="Architecture_of_an_app">Architecture of an app</h2>
 
@@ -69,7 +69,6 @@ tags:
 
 <p>The js13kPWA web site's structure is quite simple. It consists of a single HTML file (index.html), with basic CSS styling provided in style.css. Also included are a few images, scripts, and fonts. The file and folder hierarchy looks like this:</p>
 
-<div style="border: 1px solid #333; border-radius: 1em; padding: 1em; width: 21em;">
 <ul>
 	<li><code>app.js</code></li>
 	<li><code>data/</code>
@@ -92,7 +91,6 @@ tags:
 	<li><code>style.css</code></li>
 	<li><code>sw.js</code></li>
 </ul>
-</div>
 
 <h3 id="The_HTML">The HTML</h3>
 
