Prepare Privacy files for  Markdowning

--- a/files/en-us/web/privacy/redirect_tracking_protection/index.html
+++ b/files/en-us/web/privacy/redirect_tracking_protection/index.html
@@ -58,7 +58,7 @@ tags:
 </ul>
 
 <div class="blockIndicator note">
-<p><strong>Note</strong>: Even though we're clearing all of this data, we currently only flag origins for clearing when they use cookies or other site storage.</p>
+<p><strong>Note:</strong> Even though we're clearing all of this data, we currently only flag origins for clearing when they use cookies or other site storage.</p>
 </div>
 
 <p>Storage clearing ignores origin attributes. This means that storage will be cleared across <a href="https://wiki.mozilla.org/Security/Contextual_Identity_Project/Containers">containers</a> and isolated storage (i.e. from <a href="/en-US/docs/Mozilla/Add-ons/WebExtensions/API/cookies#first-party_isolation">First-Party Isolation</a>).</p>
