--- a/files/en-us/web/privacy/storage_access_policy/index.html
+++ b/files/en-us/web/privacy/storage_access_policy/index.html
@@ -209,7 +209,7 @@ tags:
 
 <p>The <a href="/en-US/docs/Tools/Network_Monitor">Network Monitor</a> in Firefox Developer Tools now includes an indicator for all resource requests that have been classified as tracking resources. This indicator is shown as a shield icon in the domain column. In the sample image below, <code>trackertest.org</code> is classified as a tracking resource, while the request to example.com is not.</p>
 
-<p><img alt="network requests in Firefox devtools indicating which ones are tracking resources with a small shield icon" src="screen_shot_2018-09-21_at_10.34.22_am.png" style="border-style: solid; border-width: 1px; display: block; margin: 0px auto;"></p>
+<p><img alt="network requests in Firefox devtools indicating which ones are tracking resources with a small shield icon" src="screen_shot_2018-09-21_at_10.34.22_am.png"></p>
 
 <h3 id="Adding_custom_domains_to_the_Tracking_Protection_list">Adding custom domains to the Tracking Protection list</h3>
 
@@ -224,7 +224,7 @@ tags:
 </ol>
 
 <div class="warning">
-<p><strong>Warning</strong>: Be sure to remove these entries after you have finished testing.</p>
+<p><strong>Warning:</strong> Be sure to remove these entries after you have finished testing.</p>
 </div>
 
 <h2 id="FAQ">FAQ</h2>
