--- a/files/en-us/web/privacy/tracking_protection/index.html
+++ b/files/en-us/web/privacy/tracking_protection/index.html
@@ -20,17 +20,17 @@ tags:
 
 <p>Note that with Firefox for Android, you can access console output using the remote debugger.</p>
 
-<p><img alt="Page information showing possible blocked content." src="blocked_content.png" style="border-style: solid; border-width: 1px; display: block; margin: 0px auto;"></p>
+<p><img alt="Page information showing possible blocked content." src="blocked_content.png"></p>
 
 <p>Click the ⓘ symbol in the address bar to view information about the currently loaded page. The popup that appears will notify you when content has been blocked.  You will also be able to disable tracking protection entirely if you choose by accessing the tracking settings.</p>
 
 <p>If tracking cookies were present, you would be able to view the list by clicking on "Blocking Tracking Cookies" in the above image to view the following popup:</p>
 
-<p><img alt="" src="tracking_cookies.png" style="border-style: solid; border-width: 1px; display: block; margin: 0px auto;"></p>
+<p><img alt="" src="tracking_cookies.png"></p>
 
 <p>You can click "Manage Content Blocking" to change the blocking settings:</p>
 
-<p><img alt="" src="content_blocking.png" style="border-style: solid; border-width: 1px; display: block; margin: 0px auto;"></p>
+<p><img alt="" src="content_blocking.png"></p>
 
 <h2 id="How_does_Firefox_choose_what_to_block">How does Firefox choose what to block?</h2>
 
