--- a/files/en-us/related/project_guidelines/index.html
+++ b/files/en-us/related/project_guidelines/index.html
@@ -5,7 +5,7 @@ tags:
   - Related
   - project guidelines
 ---
-<p class="summary">If you've had your chosen technology accepted for documentation on MDN Web Docs, the next step is to get started. This article provides you with all you need to know to get started on documenting your project.</p>
+<p>If you've had your chosen technology accepted for documentation on MDN Web Docs, the next step is to get started. This article provides you with all you need to know to get started on documenting your project.</p>
 
 <h2 id="What_does_a_successful_project_need">What does a successful project need?</h2>
 
@@ -48,7 +48,7 @@ tags:
 <p>In terms of standards, you are expected to main a reasonable level of quality for your documentation to stay on MDN. Your MDN rep will work with you on this to make you clear on what is expected. It is a good idea to produce a prototype showing what each type of page in your documentation should look like (e.g. an element or method reference page, a code example...) so that people have a template to follow.</p>
 
 <div class="note">
-<p><strong>Note</strong>: MDN is primarily an English site (en-US). The primary language for your resource should be in US English. If this really doesn't make sense for your project (e.g. it might be for a tool usable in a specific non-English locale), then talk to us about it, and we'll see how we can accommodate this.</p>
+<p><strong>Note:</strong> MDN is primarily an English site (en-US). The primary language for your resource should be in US English. If this really doesn't make sense for your project (e.g. it might be for a tool usable in a specific non-English locale), then talk to us about it, and we'll see how we can accommodate this.</p>
 </div>
 
 <h2 id="Intuitive_structure">Intuitive structure</h2>
