[Markdown][Web/Media] Prepare Web/Media for Markdowning (#9809)

--- a/files/en-us/mozilla/firefox/experimental_features/index.html
+++ b/files/en-us/mozilla/firefox/experimental_features/index.html
@@ -1220,7 +1220,7 @@ tags:
 
 <h4 id="AVIF_compliance_strictness">AVIF compliance strictness</h4>
 
-<p>The <code>image.avif.compliance_strictness</code> preference can be used to control the <em>strictness</em> appliied when processing <a href="/en-US/docs/Web/Media/Formats/Image_types#avif">AVIF</a> images.
+<p>The <code>image.avif.compliance_strictness</code> preference can be used to control the <em>strictness</em> applied when processing <a href="/en-US/docs/Web/Media/Formats/Image_types#AVIF_image">AVIF</a> images.
   This allows Firefox users to display images that render on some other browsers, even if they are not strictly compliant.</p>
 
 <p>Permitted values are:</p>
