Remove blockindicator class

--- a/files/en-us/web/privacy/redirect_tracking_protection/index.html
+++ b/files/en-us/web/privacy/redirect_tracking_protection/index.html
@@ -57,7 +57,7 @@ tags:
  <li>HTTP Authentication Cache</li>
 </ul>
 
-<div class="blockIndicator note">
+<div class="note">
 <p><strong>Note:</strong> Even though we're clearing all of this data, we currently only flag origins for clearing when they use cookies or other site storage.</p>
 </div>
 
