FF94 Relnote: ShadowRoot.delegatesFocus

--- a/files/en-us/mozilla/firefox/releases/94/index.html
+++ b/files/en-us/mozilla/firefox/releases/94/index.html
@@ -42,6 +42,7 @@ tags:
 
 <ul>
   <li>The {{domxref("HTMLScriptElement.supports()")}} static method is now supported. This provides a simple and unified method for feature checking whether a browser supports particular types of scripts, such as JavaScript modules or classic scripts ({{bug(1729239)}}).</li>
+  <li>The {{domxref("ShadowRoot.delegatesFocus")}} property is now supported, allowing code to check whether the <code>delegatesFocus</code> property was set when the <a href="/en-US/docs/Web/API/Element/attachShadow">shadow DOM was attached</a> ({{bug(1413836)}}).</li>
 </ul>
 
 <h4 id="Media_WebRTC_and_Web_Audio">Media, WebRTC, and Web Audio</h4>
