Fix grammar issue in API reference

--- a/files/en-us/mdn/contribute/howto/write_an_api_reference/index.html
+++ b/files/en-us/mdn/contribute/howto/write_an_api_reference/index.html
@@ -184,7 +184,7 @@ tags:
 
 <p>Most API references have at least one guide and sometimes also a concept page to accompany it. At minimum, an API reference should contain a guide called "Using the <em>name-of-api</em>", which will provide a basic guide to how to use the API. More complex APIs may require multiple usage guides to explain how to use different aspects of the API.</p>
 
-<p>If required, you can also including a concepts article called "<em>name-of-api</em> concepts", which will provide explanation of the theory behind any concepts related to the API that developers should understand to effectively use it.</p>
+<p>If required, you can also include a concepts article called "<em>name-of-api</em> concepts", which will provide explanation of the theory behind any concepts related to the API that developers should understand to effectively use it.</p>
 
 <p>These articles should all be created as subpages of the API overview page. For example, the Web Audio has four guides and a concept article:</p>
 
