--- a/files/en-us/mdn/contribute/howto/write_a_new_entry_in_the_glossary/index.html
+++ b/files/en-us/mdn/contribute/howto/write_a_new_entry_in_the_glossary/index.html
@@ -15,7 +15,7 @@ tags:
 ---
 <div>{{MDNSidebar}}</div>
 
-<p>This article explains how to add and link to entries in the <a href="/en-US/docs/Glossary">MDN Web Docs glossary</a>. It also provide guidelines about glossary entry layout and content. The glossary provides definitions for all the terms, jargon, abbreviations, and acronyms you'll come across when reading MDN content about the web and web development.</p>
+<p>This article explains how to add and link to entries in the <a href="/en-US/docs/Glossary">MDN Web Docs glossary</a>. It also provides guidelines about glossary entry layout and content. The glossary provides definitions for all the terms, jargon, abbreviations, and acronyms you'll come across when reading MDN content about the web and web development.</p>
 
 <p>It's possible that the glossary will never be complete because the web is always changing. By contributing new entries or fixing problems, you can help us update the glossary and fill-in gaps.</p>
 
