Remove duplicate word from Workstream Assessment

--- a/files/en-us/mdn/contribute/processes/workstream_assessment_project/index.html
+++ b/files/en-us/mdn/contribute/processes/workstream_assessment_project/index.html
@@ -104,7 +104,7 @@ tags:
 
 <p>Each workstream should have its own project board, created under <a href="https://github.com/mdn/content/projects">https://github.com/mdn/content/projects</a>. All of the individual work item issues should be listed on this board, as well as the overall project summary.</p>
 
-<p>The board title should should describe the project succinctly, as well as containing the due date for completion of the project, as a reminder to those working on it, e.g. "Restructuring the mixin docs (March 15th)".</p>
+<p>The board title should describe the project succinctly, as well as containing the due date for completion of the project, as a reminder to those working on it, e.g. "Restructuring the mixin docs (March 15th)".</p>
 
 <p>The columns on each board should be as follows, from start to end:</p>
 
