Add missing verb to GH For Beginners

--- a/files/en-us/mdn/contribute/github_beginners/index.html
+++ b/files/en-us/mdn/contribute/github_beginners/index.html
@@ -351,7 +351,7 @@ nothing to commit, working tree clean</pre>
 
 <p>The information readout has basically reset — it is telling us that there are no changes to commit, because we've now sent our previous change into the system as a commit. The key difference from before is the line "Your branch is ahead of 'origin/test-branch' by 1 commit." — our local version of the "test-branch" branch is now ahead of the remote version of "test-branch" by one commit — in other words, we've made a change locally that the remote branch doesn't have.</p>
 
-<p>Let's send our local change to the remote branch. You can do this by running the command <code>git push</code> — try this now. If there no errors, you should get a readout like this:</p>
+<p>Let's send our local change to the remote branch. You can do this by running the command <code>git push</code> — try this now. If there are no errors, you should get a readout like this:</p>
 
 <pre class="brush: plain">Enumerating objects: 5, done.
 Counting objects: 100% (5/5), done.
