Fix grammar issue in MDN Conventions

--- a/files/en-us/mdn/guidelines/conventions_definitions/index.html
+++ b/files/en-us/mdn/guidelines/conventions_definitions/index.html
@@ -164,7 +164,7 @@ tags:
    <li>Edit the contents of the page as needed, and save as usual.</li>
   </ol>
  </li>
- <li>If you want to copy just part of a page, <strong>don't just visit the page and copy from it</strong>. This introduce unwanted additional bits of HTML into the destination page, and somebody will have to clean that up, you or another editor. Nobody wants that. To copy part of an MDN page to another page:
+ <li>If you want to copy just part of a page, <strong>don't just visit the page and copy from it</strong>. This introduces unwanted additional bits of HTML into the destination page, and somebody will have to clean that up, you or another editor. Nobody wants that. To copy part of an MDN page to another page:
   <ol>
    <li>On the source page, click the <strong>Edit</strong> button on the source page.</li>
    <li><strong>Copy the content you want to reuse from within the editor UI.</strong></li>
