Fix some small typos and grammar issues

--- a/files/en-us/web/accessibility/aria/aria_techniques/using_the_alert_role/index.html
+++ b/files/en-us/web/accessibility/aria/aria_techniques/using_the_alert_role/index.html
@@ -91,7 +91,7 @@ document.getElementById("formInstruction").setAttribute("role", "alert");</pre>
 
 <p>If an element already has <code>role="alert" </code>and is initially hidden using CSS, making it visible will cause the alert to fire as if it was just added to the page. This means that an existing alert can be "reused" multiple times. </p>
 
-<p><strong>Note: </strong>In most cases this approach is not recommended, because it's not ideal to hide error or alert text that is currently not applicable. Users of older assistive technology may still be able to perceive the alert text even when the alert does not currently applies, causing users to incorrectly believe that there is a problem.</p>
+<p><strong>Note: </strong>In most cases this approach is not recommended, because it's not ideal to hide error or alert text that is currently not applicable. Users of older assistive technology may still be able to perceive the alert text even when the alert does not currently apply, causing users to incorrectly believe that there is a problem.</p>
 
 <pre class="brush: css">.hidden {
   display:none;
