--- a/files/en-us/web/accessibility/aria/roles/main_role/index.html
+++ b/files/en-us/web/accessibility/aria/roles/main_role/index.html
@@ -23,7 +23,7 @@ tags:
 
 <p>The <a href="/en-US/docs/Web/HTML/Element/main"><code>&lt;main&gt;</code> element</a> has a role of <code>main</code>. Developers should always prefer using the correct semantic HTML element over using ARIA.</p>
 
-<p>Documents and applications can be nested in the DOM, which may lead to having more than one main element as DOM descendants. If this is the case, include <code>aria-owns</code> to identify the relationship of the main to it's document or application ancestor.</p>
+<p>Documents and applications can be nested in the DOM, which may lead to having more than one main element as DOM descendants. If this is the case, include <code>aria-owns</code> to identify the relationship of the main to its document or application ancestor.</p>
 
 <h2 id="Example">Example</h2>
 
