--- a/files/en-us/web/accessibility/aria/roles/meter_role/index.html
+++ b/files/en-us/web/accessibility/aria/roles/meter_role/index.html
@@ -28,9 +28,9 @@ tags:
   <dt><code>aria-valuetext</code></dt>
   <dd>Assistive technologies often present the value of <code>aria-valuenow</code> as a percentage. If this would not be accurate use this property to make the meter value understandable.</dd>
   <dt><code>aria-valuemin</code></dt>
-  <dd>Set to to a decimal value representing the minimum value, and less than <code>aria-valuemax</code>.</dd>
+  <dd>Set to a decimal value representing the minimum value, and less than <code>aria-valuemax</code>.</dd>
   <dt><code>aria-valuemax</code></dt>
-  <dd>Set to to a decimal value representing the maximum value, and greater than <code>aria-valuemin</code>.</dd>
+  <dd>Set to a decimal value representing the maximum value, and greater than <code>aria-valuemin</code>.</dd>
 </dl>
 
 <h2 id="Examples">Examples</h2>
