--- a/files/en-us/web/accessibility/aria/roles/button_role/index.html
+++ b/files/en-us/web/accessibility/aria/roles/button_role/index.html
@@ -74,13 +74,13 @@ tags:
  </tbody>
 </table>
 
-<p>Following button activation, focus is set depending on the type of action the button performs. For example, if clicking the button opens a dialog, the focus should move to the dialog. If the button closes a dialog, focus should returns to the button that opened the dialog unless the function performed in the dialog context logically leads to a different element. If the button alters the current context, then focus typically remains on the button, such as muting and unmuting an audio file.</p>
+<p>Following button activation, focus is set depending on the type of action the button performs. For example, if clicking the button opens a dialog, the focus should move to the dialog. If the button closes a dialog, focus should return to the button that opened the dialog unless the function performed in the dialog context logically leads to a different element. If the button alters the current context, then focus typically remains on the button, such as muting and unmuting an audio file.</p>
 
 <h3 id="Required_JavaScript_Features">Required JavaScript Features</h3>
 
 <h4 id="Required_event_handlers">Required event handlers</h4>
 
-<p>Buttons can be operated by mouse, touch, and keyboard users. For native HTML <code>&lt;button&gt;</code> elements, the button's <code>onclick</code> event fires for mouse clicks and when the user presses <kbd>Space</kbd> or <kbd>Enter</kbd> while the button has focus. But if another tag is used to create a button, the <code>onclick </code>event only fires when clicked by the mouse cursor, even if <code>role="button"</code> is used. Because of this, separate key event handlers must be added to the element so that the button is be triggered when the <kbd>Space</kbd> or <kbd>Enter</kbd> key is pressed.</p>
+<p>Buttons can be operated by mouse, touch, and keyboard users. For native HTML <code>&lt;button&gt;</code> elements, the button's <code>onclick</code> event fires for mouse clicks and when the user presses <kbd>Space</kbd> or <kbd>Enter</kbd> while the button has focus. But if another tag is used to create a button, the <code>onclick </code>event only fires when clicked by the mouse cursor, even if <code>role="button"</code> is used. Because of this, separate key event handlers must be added to the element so that the button is triggered when the <kbd>Space</kbd> or <kbd>Enter</kbd> key is pressed.</p>
 
 <dl>
  <dt><code>onclick</code></dt>
