Add-ons: fix misplaced colons in notes

--- a/files/en-us/mozilla/add-ons/webextensions/interact_with_the_clipboard/index.html
+++ b/files/en-us/mozilla/add-ons/webextensions/interact_with_the_clipboard/index.html
@@ -108,7 +108,7 @@ browser.alarms.onAlarm.addListener(copy);</pre>
 </pre>
 
 <div class="notecard note">
-<p><strong>Note</strong>: The<code>clipboard-write</code> permission name is not currently supported in Firefox — only Chromium browsers.</p>
+<p><strong>Note:</strong> The<code>clipboard-write</code> permission name is not currently supported in Firefox — only Chromium browsers.</p>
 </div>
 
 <h3 id="Browser-specific_considerations">Browser-specific considerations</h3>
