--- a/files/en-us/mozilla/add-ons/webextensions/internationalization/index.html
+++ b/files/en-us/mozilla/add-ons/webextensions/internationalization/index.html
@@ -116,7 +116,7 @@ tags:
 <p>This file is standard JSON — each one of its members is an object with a name, which contains a <code>message</code> and a <code>description</code>. All of these items are strings; <code>$URL$</code> is a placeholder, which is replaced with a substring at the time the <code>notificationContent</code> member is called by the extension. You'll learn how to do this in the {{anch("Retrieving message strings from JavaScript")}} section.</p>
 
 <div class="note">
-<p><strong>Note</strong>: You can find much more information about the contents of <code>messages.json</code> files in our <a href="/en-US/docs/Mozilla/Add-ons/WebExtensions/API/i18n/Locale-Specific_Message_reference">Locale-Specific Message reference</a>.</p>
+<p><strong>Note:</strong> You can find much more information about the contents of <code>messages.json</code> files in our <a href="/en-US/docs/Mozilla/Add-ons/WebExtensions/API/i18n/Locale-Specific_Message_reference">Locale-Specific Message reference</a>.</p>
 </div>
 
 <h2 id="Internationalizing_manifest.json">Internationalizing manifest.json</h2>
@@ -394,7 +394,7 @@ padding-left: 1.5em;</pre>
 </ol>
 
 <div class="note">
-<p><strong>Note</strong>: This works to change the browser's locale, even if you haven't got the <a href="https://addons.mozilla.org/en-US/firefox/language-tools/">language pack</a> installed for that language. You'll just get the browser UI in your default language if this is the case.</p>
+<p><strong>Note:</strong> This works to change the browser's locale, even if you haven't got the <a href="https://addons.mozilla.org/en-US/firefox/language-tools/">language pack</a> installed for that language. You'll just get the browser UI in your default language if this is the case.</p>
 </div>
 
 <div class="note">
