--- a/files/en-us/mozilla/add-ons/webextensions/manifest.json/theme/index.html
+++ b/files/en-us/mozilla/add-ons/webextensions/manifest.json/theme/index.html
@@ -46,11 +46,11 @@ browser-compat: webextensions.manifest.theme
 <p>Use the theme key to define a static theme to apply to Firefox.</p>
 
 <div class="note">
-<p><strong>Note</strong>: If you want to include a theme with an extension, please see the {{WebExtAPIRef("theme")}} API.</p>
+<p><strong>Note:</strong> If you want to include a theme with an extension, please see the {{WebExtAPIRef("theme")}} API.</p>
 </div>
 
 <div class="note">
-<p><strong>Note</strong>: Since May 2019, themes need to be signed to be installed ({{bug(1545109)}}).  See <a href="https://extensionworkshop.com/documentation/publish/signing-and-distribution-overview/#distributing-your-addon">Signing and distributing your add-on</a> for more details.</p>
+<p><strong>Note:</strong> Since May 2019, themes need to be signed to be installed ({{bug(1545109)}}).  See <a href="https://extensionworkshop.com/documentation/publish/signing-and-distribution-overview/#distributing-your-addon">Signing and distributing your add-on</a> for more details.</p>
 </div>
 
 <div class="note">
