--- a/files/en-us/mozilla/add-ons/webextensions/match_patterns/index.html
+++ b/files/en-us/mozilla/add-ons/webextensions/match_patterns/index.html
@@ -89,7 +89,7 @@ browser-compat: webextensions.match_patterns.scheme
 <p>Neither the <a href="https://en.wikipedia.org/wiki/Fragment_identifier">URL fragment identifier</a>, nor the <code>#</code> which precedes it, are considered as part of the <em>path</em>.</p>
 
 <div class="notecard note">
-<p><strong>Note</strong>: The path pattern string should not include a port number. Adding a port, as in: <em>"http://localhost:1234/*"</em> causes the match pattern to be ignored. However, "<em>http://localhost:1234</em>" will match with "<em>http://localhost/*</em>"</p>
+<p><strong>Note:</strong> The path pattern string should not include a port number. Adding a port, as in: <em>"http://localhost:1234/*"</em> causes the match pattern to be ignored. However, "<em>http://localhost:1234</em>" will match with "<em>http://localhost/*</em>"</p>
 </div>
 
 <h3 id="&lt;all_urls&gt;">&lt;all_urls&gt;</h3>
