Fix hidden elements in add-ons docs

--- a/files/en-us/mozilla/add-ons/webextensions/user_interface/browser_styles/index.html
+++ b/files/en-us/mozilla/add-ons/webextensions/user_interface/browser_styles/index.html
@@ -266,10 +266,7 @@ tags:
   &lt;button class="panel-section-footer-button default"&gt;Confirm&lt;/button&gt;
 &lt;/footer&gt;</pre>
 
-<div class="hidden">
-<h4 id="CSS">CSS</h4>
-
-<pre class="brush: css">/* Global */
+<pre class="brush: css hidden">/* Global */
 html,
 body {
   background: white;
@@ -437,8 +434,7 @@ button.panel-section-tabs-button {
   z-index: 99;
 }</pre>
 
-<hr>
-<pre class="brush: css">/* Example specific – not part of chrome://browser/content/extension.css */
+<pre class="brush: css hidden">/* Example specific – not part of chrome://browser/content/extension.css */
 body {
   background: #fcfcfc;
   background-clip: padding-box;
@@ -460,7 +456,6 @@ html &gt; body {
 .icon-section-header {
   background-image: url("data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSIzMiIgaGVpZ2h0PSIzMiIgdmlld0JveD0iMCAwIDMyIDMyIj48Y2lyY2xlIGZpbGw9IiMzNjM5NTkiIGN4PSIxNSIgY3k9IjE1IiByPSIxNSIvPjwvc3ZnPg==");
 }</pre>
-</div>
 
 <h4 id="Result">Result</h4>
 
