Remove inline styles from add-ons docs

--- a/files/en-us/mozilla/add-ons/webextensions/anatomy_of_a_webextension/index.html
+++ b/files/en-us/mozilla/add-ons/webextensions/anatomy_of_a_webextension/index.html
@@ -27,7 +27,7 @@ tags:
  <dd>Make packaged content accessible to web pages and content scripts.</dd>
 </dl>
 
-<p><img alt="" src="webextension-anatomy.png" style="display: block; margin-left: auto; margin-right: auto;"></p>
+<p><img alt="" src="webextension-anatomy.png"></p>
 
 <p>See the <code><a href="/en-US/docs/Mozilla/Add-ons/WebExtensions/manifest.json">manifest.json</a></code> reference page for all the details.</p>
 
