--- a/files/en-us/mozilla/add-ons/webextensions/browser_actions/index.html
+++ b/files/en-us/mozilla/add-ons/webextensions/browser_actions/index.html
@@ -8,7 +8,7 @@ tags:
 
 <p>A browser action is a button you can add to the browser toolbar. Users can click the button to interact with your extension.</p>
 
-<p><img alt="" src="browser-action.png" style="display: block; margin-left: auto; margin-right: auto;"></p>
+<p><img alt="" src="browser-action.png"></p>
 
 <p>There are two ways to specify a browser action: with a <a href="/en-US/docs/Mozilla/Add-ons/WebExtensions/user_interface/Popups">popup</a>, or without a popup.</p>
 
