--- a/files/en-us/mozilla/add-ons/webextensions/manifest.json/theme/index.html
+++ b/files/en-us/mozilla/add-ons/webextensions/manifest.json/theme/index.html
@@ -1332,7 +1332,7 @@ browser-compat: webextensions.manifest.theme
 
 <p>It will give you a browser that looks like this:</p>
 
-<p><img alt="" src="theme.png" style="display: block; margin-left: auto; margin-right: auto;"></p>
+<p><img alt="" src="theme.png"></p>
 
 <p>In this screenshot, <code>"toolbar_vertical_separator"</code> is the white vertical line in the URL bar dividing the Reader Mode icon from the other icons.</p>
 
