--- a/files/en-us/mozilla/add-ons/webextensions/user_interface/context_menu_items/index.html
+++ b/files/en-us/mozilla/add-ons/webextensions/user_interface/context_menu_items/index.html
@@ -8,7 +8,7 @@ tags:
 
 <p><span class="seoSummary">This user interface option adds one or more items to a browser context menu.</span> This is the context menu available when a user right-clicks on a web page. Tabs can have context menus also, available through the <a href="/en-US/docs/Mozilla/Add-ons/WebExtensions/API/menus">browser.menus API</a>.</p>
 
-<p><img alt="Example of content menu items added by a WebExtension, from the context-menu-demo example" src="context_menu_example.png" style="display: block; margin-left: auto; margin-right: auto;"></p>
+<p><img alt="Example of content menu items added by a WebExtension, from the context-menu-demo example" src="context_menu_example.png"></p>
 
 <p>You would use this option to expose features that are relevant to specific browser or web page contexts. For example, you could show features to open a graphic editor when the user clicks on an image or offer a feature to save page content when part of a page is selected. You can add plain menu items, checkbox items, radio button groups, and separators to menus. Once a context menu item has been added using {{WebExtAPIRef("contextMenus.create")}} it's displayed in all browser tabs, but you can hide it by removing it with {{WebExtAPIRef("contextMenus.remove")}}.</p>
 
