--- a/files/en-us/mozilla/add-ons/webextensions/user_interface/devtools_panels/index.html
+++ b/files/en-us/mozilla/add-ons/webextensions/user_interface/devtools_panels/index.html
@@ -15,7 +15,7 @@ tags:
 
 <p>When an extension provides tools that are of use to developers, it's possible to add a UI for them to the browser's developer tools as a new panel.</p>
 
-<p><img alt='Simple example showing the addition of "My panel" to the Developer Tools tabs.' src="developer_panel_tab.png" style="display: block; margin-left: auto; margin-right: auto;"></p>
+<p><img alt='Simple example showing the addition of "My panel" to the Developer Tools tabs.' src="developer_panel_tab.png"></p>
 
 <h2 id="Specifying_a_developer_tools_panel">Specifying a developer tools panel</h2>
 
