--- a/files/en-us/mozilla/add-ons/webextensions/user_interface/popups/index.html
+++ b/files/en-us/mozilla/add-ons/webextensions/user_interface/popups/index.html
@@ -11,7 +11,7 @@ tags:
 
 <p>A popup is a dialog that's associated with a <a href="/en-US/docs/Mozilla/Add-ons/WebExtensions/user_interface/Browser_action">toolbar button</a> or <a href="/en-US/docs/Mozilla/Add-ons/WebExtensions/user_interface/Page_actions">address bar button</a>. This page describes popups in general, specifying them, debugging, resizing, and designing them, as well as examples of use.</p>
 
-<p><img alt="" src="page_action_popup.png" style="display: block; margin-left: auto; margin-right: auto;"></p>
+<p><img alt="" src="page_action_popup.png"></p>
 
 <p>When the user clicks the button, the popup is shown. When the user clicks anywhere outside the popup, the popup is closed. The popup can be closed programmatically by calling <code><a href="/en-US/docs/Web/API/Window/close">window.close()</a></code> from a script running in the popup. However, you can't open the popup programmatically from an extension's JavaScript; it can be opened only in response to a user action.</p>
 
