--- a/files/en-us/mozilla/add-ons/webextensions/user_interface/sidebars/index.html
+++ b/files/en-us/mozilla/add-ons/webextensions/user_interface/sidebars/index.html
@@ -12,7 +12,7 @@ tags:
 
 <p>The browser may include a number of built-in sidebars. For example, Firefox includes a sidebar for interacting with bookmarks:</p>
 
-<p><img alt="" src="bookmarks-sidebar.png" style="display: block; margin-left: auto; margin-right: auto;">Using the <code><a href="/en-US/docs/Mozilla/Add-ons/WebExtensions/manifest.json/sidebar_action">sidebar_action</a></code> manifest.json key, an extension can add its own sidebar to the browser. It will be listed alongside the built-in sidebars, and the user will be able to open it using the same mechanism as for the built-in sidebars.</p>
+<p><img alt="" src="bookmarks-sidebar.png">Using the <code><a href="/en-US/docs/Mozilla/Add-ons/WebExtensions/manifest.json/sidebar_action">sidebar_action</a></code> manifest.json key, an extension can add its own sidebar to the browser. It will be listed alongside the built-in sidebars, and the user will be able to open it using the same mechanism as for the built-in sidebars.</p>
 
 <p>Like a browser action popup, the sidebar's contents are specified as an HTML document. When the user opens the sidebar, the sidebar's document is loaded into every open browser window. Each window gets its own instance of the document. When new windows are opened, they get their own sidebar documents as well.</p>
 
