--- a/files/en-us/mozilla/add-ons/webextensions/your_second_webextension/index.html
+++ b/files/en-us/mozilla/add-ons/webextensions/your_second_webextension/index.html
@@ -28,7 +28,7 @@ tags:
 
 <p>You could visualise the overall structure of the extension like this:</p>
 
-<p><img alt="" src="untitled-1.png" style="display: block; margin-left: auto; margin-right: auto;"></p>
+<p><img alt="" src="untitled-1.png"></p>
 
 <p>It's a simple extension, but shows many of the basic concepts of the WebExtensions API:</p>
 
