--- a/files/en-us/mozilla/add-ons/webextensions/extending_the_developer_tools/index.html
+++ b/files/en-us/mozilla/add-ons/webextensions/extending_the_developer_tools/index.html
@@ -119,7 +119,7 @@ browser.runtime.onMessage.addListener(handleMessage);</pre>
 
 <p>If you need to exchange messages between the content scripts running in the target window and a devtools document, it's a good idea to use the {{WebExtAPIRef("runtime.connect()")}} and {{WebExtAPIRef("runtime.onConnect")}} to set up a connection between the background page and the devtools document. The background page can then maintain a mapping between tab IDs and {{WebExtAPIRef("runtime.Port")}} objects, and use this to route messages between the two scopes.</p>
 
-<p><img alt="" src="devtools-content-scripts.png" style="display: block; margin-left: auto; margin-right: auto;"></p>
+<p><img alt="" src="devtools-content-scripts.png"></p>
 
 <h2 id="Limitations_of_the_devtools_APIs">Limitations of the devtools APIs</h2>
 
