--- a/files/en-us/mozilla/add-ons/webextensions/user_interface/browser_action/index.html
+++ b/files/en-us/mozilla/add-ons/webextensions/user_interface/browser_action/index.html
@@ -7,7 +7,7 @@ tags:
 <div>{{AddonSidebar}}</div>
 
 <p>Commonly referred to as a <a href="/en-US/docs/Mozilla/Add-ons/WebExtensions/API/browserAction">browser action</a>, this user interface option is a button added to the browser toolbar. Users click the button to interact with your extension.<br>
- <img alt="" src="browser-action.png" style="display: block; margin-left: auto; margin-right: auto;"></p>
+ <img alt="" src="browser-action.png"></p>
 
 <p>The toolbar button (browser action) is very like the address bar button (page action). For the differences, and guidance on when to use what, see <a href="/en-US/docs/Mozilla/Add-ons/WebExtensions/user_interface/Page_actions#page_actions_and_browser_actions">Page actions and browser actions</a>.</p>
 
