--- a/files/en-us/mozilla/add-ons/webextensions/user_interface/notifications/index.html
+++ b/files/en-us/mozilla/add-ons/webextensions/user_interface/notifications/index.html
@@ -8,7 +8,7 @@ tags:
 
 <p><span class="seoSummary">Notifications allow you to communicate information about your extension or its content using the underlying operating system's notification service.</span></p>
 
-<p><img alt="" src="notify-shadowed.png" style="display: block; margin-left: auto; margin-right: auto;"></p>
+<p><img alt="" src="notify-shadowed.png"></p>
 
 <p>Notifications can include a call to action for the user, and your add-on can listen for the user clicking the notification or the notification closing.</p>
 
