--- a/files/en-us/mozilla/add-ons/webextensions/user_interface/page_actions/index.html
+++ b/files/en-us/mozilla/add-ons/webextensions/user_interface/page_actions/index.html
@@ -11,7 +11,7 @@ tags:
 
 <p>Commonly referred to as a <a href="/en-US/docs/Mozilla/Add-ons/WebExtensions/API/pageAction">page action</a> button, this user interface option is a button added to the browser address bar. Users click the button to interact with extensions.</p>
 
-<p><img alt="" src="address_bar_button.png" style="display: block; margin-left: auto; margin-right: auto;"></p>
+<p><img alt="" src="address_bar_button.png"></p>
 
 <h2 id="Page_actions_and_browser_actions">Page actions and browser actions</h2>
 
